Refactor benchmark scripts and improve evaluation process
- Removed GEMINI_API_KEY requirement from README for transcribing.
- Enhanced benchmark.sh to streamline transcription and evaluation processes with improved structure and error handling.
- Introduced common.sh for shared functions and variables across scripts.
- Updated compare_input_source.sh to utilize common functions for better maintainability.
- Refined run.sh to simplify command usage and improve dataset handling.
- Enhanced temperature.sh for clearer output and summary reporting.
- Improved overall script readability and organization for easier future modifications.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-GEMINI_API_KEY=your-gemini-api-key
-LATTIFAI_API_KEY=your-lattifai-api-key
+# LattifAI Benchmark Environment Variables
+# Copy this file to .env and fill in your API keys
+
+# Gemini API Key (for transcription)
+# Get yours at: https://aistudio.google.com/apikey
+GEMINI_API_KEY=
+
+# LattifAI API Key (for alignment)
+# Get yours at: https://lattifai.com
+LATTIFAI_API_KEY=
