--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ data/**/*.txt
 outputs/
 data/*/gemini-*.ass
 data/_compare/
+data/OpenAI-Introducing-GPT-4o/DQacCB9tDaw.en-uYU-mmqFLq8_LattifAI.ass
