feat: add new benchmark scripts and update README with results extraction and formatting

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ outputs/
 data/*/gemini-*.ass
 data/_compare/
 data/OpenAI-Introducing-GPT-4o/DQacCB9tDaw.en-uYU-mmqFLq8_LattifAI.ass
+.benchmark_results/
+data/OpenAI-Introducing-GPT-4o/DQacCB9tDaw.en-uYU-mmqFLq8.ass
